# charmhub-listing-review-poc

./: .gitignore  CONTRIBUTING.md  PROCESS.md  README.md  create_issue.py  evaluate.py  pyproject.toml  reviewers.yaml  tox.ini  update_issue.py
.github/ISSUE_TEMPLATE/: charmhub-listing-request.md  listing-request.yml
.github/workflows/: review-request.yaml  update-issue-on-comment.yaml
src/charmhub_listing_review/: __init__.py  evaluate.py  update_issue.py
tests/unit/: test_evaluate.py  test_update_issue.py
